# Zephyr

./: .gitignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: release.yml
src/: api.js  i18n.js  index.html  main.js  rules.js  styles.css  tailwind.css  ui.js  ui.test.js  websocket.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/bundled/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_manager.rs  core_manager.rs  lib.rs  lib_test.rs  main.rs  sys_proxy.rs  tray.rs  updater.rs  uwp_loopback.rs
src/modules/: html-templates.js  traffic-chart.js
